[package]
name = "gotham_examples_session_redis_session_backend"
description = "Example of using Redis as a session backend in the Gotham Web Framework"
version = "0.0.1"
authors = ["Ryan Caught <rcaught@gmail.com>"]
publish = false

[dependencies]
gotham = { path = "../../../gotham" }
gotham_derive = { path = "../../../gotham_derive" }

hyper = "0.11"
mime = "0.3"
serde = "1"
serde_derive = "1"
time = "0.1.39"
